--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Expo Redux Template",
-    "slug": "expo-redux-template",
+    "name": "MemoNote",
+    "slug": "memonote",
     "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
