--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,17 +27,25 @@
     "expo-updates": "~0.16.4",
     "i18n-js": "^4.1.1",
     "lottie-react-native": "5.1.4",
-    "native-base": "^3.4.15",
+    "native-base": "^3.4.28",
+    "nativewind": "^4.1.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.14",
     "react-native-config": "^1.5.3",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-expo-redux-template": "file:",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-vision-camera": "^4.6.3",
     "react-native-web": "~0.18.11",
     "react-redux": "^8.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
