--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
+    "expo-video": "^2.0.2",
     "expo-web-browser": "~14.0.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
@@ -41,6 +42,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2"
   },
