--- a/frontend/app.json
+++ b/frontend/app.json
@@ -21,7 +21,8 @@
         "android.permission.RECORD_AUDIO",
         "android.permission.READ_MEDIA_VIDEO",
         "android.permission.READ_MEDIA_AUDIO"
-      ]
+      ],
+      "package": "com.ducquan2003.memonoteexpo"
     },
     "web": {
       "bundler": "metro",
