--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "expo-system-ui": "~4.0.4",
     "expo-video": "^2.0.2",
     "expo-web-browser": "~14.0.1",
+    "memonote-expo": "file:",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
