--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,42 +16,46 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-picker/picker": "^2.6.1",
-    "@react-native-vector-icons/common": "^11.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@sentry/react-native": "~6.3.0",
     "expo": "~52.0.11",
+    "expo-application": "~6.0.1",
     "expo-blur": "~14.0.1",
     "expo-camera": "~16.0.7",
     "expo-constants": "~17.0.3",
+    "expo-device": "~7.0.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-media-library": "~17.0.3",
-    "expo-router": "~4.0.9",
+    "expo-router": "~4.0.15",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
+    "expo-updates": "~0.26.10",
     "expo-video": "^2.0.2",
     "expo-web-browser": "~14.0.1",
     "memonote-expo": "file:",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "^6.6.1",
+    "react-native-pager-view": "6.5.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.5",
+    "sentry-expo": "~7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
